@@ -61,6 +61,7 @@
      * Fixed download ref, added total storage space info
      * Added storage space info to api/printer
      * Added function for save file with custom name
+     * Fix files not reloading when already selected for printing, but overwritten
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
